--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ ion-icon {
 }
 
 ion-icon:hover {
-  opacity: 0.7;
+  color: #F6439D;
 }
 
 nav,
@@ -49,6 +49,9 @@ main {
 
   overflow: hidden;
   background-color: #fafafa;
+}
+
+.border {
   border-top: 1px solid #dbdbdb;
   border-bottom: 1px solid #dbdbdb;
 }
@@ -74,9 +77,60 @@ main {
   text-overflow: ellipsis;
 }
 
-.post img,
+.posts {
+  background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.post {
+  background-color: #fff;
+}
+
+.post-header {
+  height: 61px;
+  padding: 0 17px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.post-header div {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.ellipsis {
+  font-size: 16px;
+}
+
+.post > img,
 video {
   width: 100vw;
+}
+
+.post-reactions {
+  height: 38px;
+  padding: 0 18px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.post-reactions div {
+  display: flex;
+  gap: 18px;
+}
+
+.post-likes {
+  height: 38px;
+  padding: 0 18px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 footer {
