--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ ion-icon {
 }
 
 ion-icon:hover {
-  color: #F6439D;
+  color: #f6439d;
 }
 
 nav,
@@ -101,6 +101,7 @@ main {
   align-items: center;
   gap: 15px;
 }
+
 .post-header p {
   color: #262626;
   font-weight: 500;
@@ -147,6 +148,55 @@ video {
 
 strong {
   font-weight: 500;
+}
+
+.post-comments {
+  height: 50px;
+  display: flex;
+  padding: 0 18px;
+  justify-content: space-between;
+  align-items: center;
+
+  border-top: 1px solid #dbdbdb;
+}
+
+.post-comments div {
+  display: flex;
+  gap: 10px;
+}
+
+input {
+  font-family: "Roboto", sans-serif;
+  color: #222;
+}
+
+input::placeholder {
+  font-family: "Roboto", sans-serif;
+  color: #979797;
+}
+
+.post-comments input {
+  font-size: 16px;
+  line-height: 20px;
+
+  width: 400px;
+  border: none;
+}
+
+.post-comments input:focus {
+  outline: none;
+}
+
+
+button {
+  background-color: #fff;
+  border: none;
+  color: #b2dffc;
+  transition: all 300ms;
+}
+
+button:hover {
+  color: #0095f6;
 }
 
 footer {
