completed small desktop

--- a/styles/media.css
+++ b/styles/media.css
@@ -1,3 +1,74 @@
-@media (min-width: 600px) {
+@media (min-width: 614px) {
+  nav:first-child {
+    display: none;
+  }
 
+  nav:last-child {
+    display: flex;
+    border-bottom: 1px solid #dbdbdb;
+  }
+
+  nav div {
+    display: flex;
+    align-items: center;
+  }
+
+  .logo ion-icon {
+    padding-right: 12px;
+    margin-right: 12px;
+    border-right: 1px solid #dbdbdb;
+  }
+
+  nav input {
+    background-color: #fafafa;
+    width: 215px;
+    height: 28px;
+
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+  }
+
+  .actions {
+    gap: 25px;
+  }
+
+  main {
+    width: 614px;
+    margin: 88px auto 54px;
+  }
+
+  .stories {
+    background-color: #fff;
+    margin-bottom: 24px;
+    border: 1px solid #dbdbdb;
+
+    position: relative;
+  }
+
+  .stories ion-icon {
+    position: absolute;
+    top: 46px;
+    right: 8px;
+    color: #fff;
+    font-size: 26px;
+    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+  }
+
+  .post {
+    width: 614px;
+    border: 1px solid #dbdbdb;
+  }
+
+  .post > img,
+  video {
+    width: 612px;
+  }
+
+  footer {
+    display: none;
+  }
 }
