--- a/styles/media.css
+++ b/styles/media.css
@@ -98,6 +98,10 @@
     flex-direction: column;
     gap: 16px;
     width: 300px;
+    height: 450px;
+    position: sticky;
+    top: 111px;
+    right: 0;
   }
 
   aside p {
