--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,6 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 }
 
 header {
@@ -22,10 +18,11 @@ nav:last-child {
 
 nav {
   height: 54px;
-  background-color: #FFF;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 22px;
 }
 
 ion-icon {
@@ -33,13 +30,8 @@ ion-icon {
 }
 
 ion-icon:hover {
-  color: #F6439D;
+  color: #f6439d;
   cursor: pointer;
-}
-
-nav,
-footer {
-  padding: 0 22px;
 }
 
 main {
@@ -57,12 +49,12 @@ main {
 }
 
 .border {
-  border-top: 1px solid #DBDBDB;
-  border-bottom: 1px solid #DBDBDB;
+  border-top: 1px solid #dbdbdb;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .story {
-  width: 66px;
+  min-width: 66px;
   position: relative;
 }
 
@@ -89,7 +81,7 @@ main {
 }
 
 .post {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .post-header {
@@ -184,16 +176,16 @@ button:hover {
 }
 
 .more-comments {
-  background-color: #FFF;
+  background-color: #fff;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
-  color: #8E8E8E;
+  color: #8e8e8e;
   margin-bottom: 10px;
 }
 
 .like-comment {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .like-comment ion-icon {
@@ -207,7 +199,7 @@ button:hover {
   justify-content: space-between;
   align-items: center;
 
-  border-top: 1px solid #DBDBDB;
+  border-top: 1px solid #dbdbdb;
 }
 
 .your-comment div {
@@ -222,7 +214,6 @@ input {
 }
 
 input::placeholder {
-  font-family: "Roboto", sans-serif;
   color: #979797;
 }
 
@@ -239,14 +230,14 @@ input::placeholder {
 }
 
 .your-comment button {
-  background-color: #FFF;
-  color: #B2DFFC;
+  background-color: #fff;
+  color: #b2dffc;
   transition: all 300ms;
   margin-left: 10px;
 }
 
 .your-comment button:hover {
-  color: #0095F6;
+  color: #0095f6;
 }
 
 aside {
@@ -254,12 +245,12 @@ aside {
 }
 
 footer {
-  background-color: #FFF;
+  background-color: #fff;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  padding: 0 22px;
   height: 54px;
   position: fixed;
   bottom: 0;
